--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1" >
-            <img src="images/user.png" alt="" />
+            <img src="images/user-3.jpg" alt="" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
@@ -81,12 +81,12 @@
  <!-- --------------------------- This will display the skills tab---------------------------------- -->
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li><span>UI/UX</span><br />Designeing web interfaces</li>
+                <li><span>Programming Languages</span><br />C, C++, Python</li>
                 <li>
-                  <span>Web Developer</span><br />Designeing web interfaces
+                  <span>Web Developement</span><br />HTML, CSS, JS, React, Node, Express, Mongodb
                 </li>
                 <li>
-                  <span>App Developer</span><br />Designeing web interfaces
+                  <span>Tools</span><br />Github, VS Code, Codepen
                 </li>
               </ul>
             </div>
@@ -94,11 +94,11 @@
   <!-- -----------------------------------This will display the Achievements tab --------------------------- -->
             <div class="tab-contents" id="achievements">
               <ul>
-                <li><span>3 Time SSB</span><br />Conference Out</li>
+                <li><span>3 Times SSB</span><br />National Defence Academy Conference Out</li>
                 <li>
-                  <span>District Topper</span><br />Class 10
+                  <span>District Topper</span><br />Recieved Cash Price from Hon. Late. Governer of Bengal
                 </li>
-                <li><span>Silver Zone Olympaid</span><br />Goldmedalist</li>
+                <li><span>Silver Zone Olympaid</span><br />School Goldmedalist and Round 2 Qaulifier</li>
               </ul>
             </div>
 
@@ -129,31 +129,33 @@
         <div class="experiences-list">
           <div>
             <i class="fa-solid fa-pen"></i>
-            <h2>Content Writer @Gfg</h2>
-            <p>Gfg content Writer</p>
-            <a href="#">See Code</a>
+            <h2>Content Writer</h2>
+            <h2>@GeeksForGeeks</h2>
+            <p>Working as a content writer with Gfg.</p>
+            <br>
+            <p>Publishing article helps to deepen the knowledge and understanding the concepts of the topic, it also add to the exploration skill.</p>
+            <br>
+            <p>Published, improved and under-review more that 10 more articles.</p>
           </div>
           <div>
             <i class="fa-solid fa-chalkboard"></i>
-            <h2>Teaching Assistant @Coding Ninjas</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum
-              officiis laboriosam consequuntur eaque, adipisci laborum suscipit
-              quis nemo corrupti optio molestias deserunt itaque. Ut et, esse
-              exercitationem assumenda sint nostrum.
-            </p>
-            <a href="#">See Code</a>
+            <h2>Teaching Assistant</h2>
+            <h2>@Coding Ninjas</h2>
+            <p>Working as TA in Coding Ninjas Since Nov-23</p>
+            <br>
+            <p>Taking doubt of the students helps to improve the debugging skill and also helps to improve the understanding of others code faster.</p>
+            <br>
+            <p>Mentored over 300+ students with topics related to DSA and career.</p>
           </div>
           <div>
             <i class="fa-brands fa-google-plus"></i>
-            <h2>Tutor @Sankalp</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-              adipisci consectetur labore, nihil quia deleniti animi incidunt
-              dolores repudiandae cupiditate, quam dolore rem repellendus
-              commodi.
-            </p>
-            <a href="#">See Project</a>
+            <h2>Member</h2>
+            <h2>@GDSC - Web</h2>
+            <p>Joioned the GDSC Web team as a member</p>
+            <br>
+            <p>Working in the clud inhance the team cooperation and everyone is eager to help you when you are stuck somewhere, learnging and contributing.</p>
+            <br>
+            <p></p>
           </div>
           
         </div>
@@ -194,7 +196,7 @@
                     • Developed a responsive portfolio website. <br />
                     • This project is built with HTML,CSS and JavaScript.
                   </p>
-                  <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
+                  <a href="https://github.com/gopalji78/portfolio"><i class="fa-sharp fa-solid fa-link"></i></a>
                 </div>
               </li>
               <li class="glide__slide">
@@ -208,7 +210,7 @@
                     • One can add,search and delete items in
                     list.
                   </p>
-                  <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
+                  <a href="https://github.com/gopalji78/Shopping-List-React"><i class="fa-sharp fa-solid fa-link"></i></a>
                 </div>
               </li>
               <li class="glide__slide">
@@ -221,7 +223,7 @@
                     • This is a demo containing all my GFG articles. <br />
                     • Uses react-router and can perform CRUD operations.
                   </p>
-                  <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
+                  <a href="https://github.com/gopalji78/Article-Hub"><i class="fa-sharp fa-solid fa-link"></i></a>
                 </div>
               </li>
               <li class="glide__slide">
@@ -232,7 +234,7 @@
                   <h3>Blog Application</h3>
                   <p>
                     • Developed Full-stack Blog Application. <br />
-                    • With authentication bases edit and create-post access.
+                    • With JWT Authentication and token based access.
                   </p>
                   <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
                 </div>
@@ -247,7 +249,7 @@
                     • Build a custome google maps. <br>
                     • Uses google cloud Google maps api to display a custom map.
                   </p>
-                  <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
+                  <a href="https://github.com/gopalji78/college-custom-map"><i class="fa-sharp fa-solid fa-link"></i></a>
                 </div>
               </li>
             </ul>
