--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
             <p>gjmishra01@gmail.com</p>
             <p><i class="fa-solid fa-phone"></i> 6307057797</p>
             <div class="social-icons">
-              <a href="gitHub"><i class="fa-brands fa-github"></i></a>
-              <a href="linkedIn"><i class="fa-brands fa-linkedin"></i></a>
-              <a href="email"><i class="fa-solid fa-envelope"></i></a>
+              <a href="https://github.com/gopalji78"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/gopal-ji-220324228?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="mailto: gjmishra01@gmail.com"><i class="fa-solid fa-envelope"></i></a>
             </div>
             <a
-              href="https://drive.google.com/file/d/1MXHIUzBSw9o-AIEwuVJC7UhnIJ6NM9L0/view?usp=drivesdk"
+              href="https://drive.google.com/file/d/1WV7H8pemBkSSU7TclyfmmeenOxnfdR4P/view?usp=drive_link"
               class="btn"
               style="color: #fff"
               >Download CV</a
