--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     • Developed Full-stack Blog Application. <br />
                     • With JWT Authentication and token based access.
                   </p>
-                  <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
+                  <a href="https://github.com/gopalji78/blog-app"><i class="fa-sharp fa-solid fa-link"></i></a>
                 </div>
               </li>
               <li class="glide__slide">
